# t616-site

./: .cursorrules  .gitignore  .pages.yml  .pre-commit-config.yaml  README.md  TODO.md  WEBADMIN_GUIDE.md  build.py  pyproject.toml  style.css
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  sync_events.yml
content/: events.yaml  highlights.yaml
docs/: about-us.html  index.html  links.html  photos.html  resources.html  t616-eagle-scout-stories.html
docs/assets/downloads/: 1d2h45513_312322.doc
pages/: about-us.body.html  index.body.html  links.body.html  photos.body.html  resources.body.html  t616-eagle-scout-stories.body.html
scripts/: sync_twh_events.py
src/t616_site/: __init__.py  sync_twh_events.py
templates/: footer.html  header.html
