[project]
name = "t616-site"
version = "0.1.0"
description = "Static site compiler and TroopWebHost sync utilities for Boy Scout Troop 616"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
]

[project.scripts]
sync-twh-events = "t616_site.sync_twh_events:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["t616_site"]
